--- a/ODK.Web.Razor/Views/Shared/Account/_PersonalDetailsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_PersonalDetailsForm.cshtml
@@ -21,7 +21,7 @@
     }
     else
     {        
-        @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control", type = "Email" })
+        @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control", type = "Email", data_email = "" })
         <div class="ms-1 text-muted">You will need access to this email to verify your account</div>
         @Html.ValidationMessageFor(x => x.EmailAddress)
     }
@@ -44,13 +44,13 @@
 <div class="row">
     <div class="form-group mb-3 required col-md-6">
         @Html.LabelFor(x => x.FirstName, new { @class = "form-label" })
-        @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control" })
+        @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control", data_firstname = "" })
         @Html.ValidationMessageFor(x => x.FirstName)
     </div>
 
     <div class="form-group mb-3 required col-md-6">
         @Html.LabelFor(x => x.LastName, new { @class = "form-label" })
-        @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
+        @Html.TextBoxFor(x => x.LastName, new { @class = "form-control", data_lastname = "" })
         @Html.ValidationMessageFor(x => x.LastName)
     </div>
 </div>
