--- a/ODK.Web.Razor/Views/Shared/Account/_SiteLoginContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_SiteLoginContent.cshtml
@@ -8,6 +8,7 @@
 
 <form action="/account/login/google" method="post" data-oauth-submit>
     @Html.AntiForgeryToken()
+    <input type="hidden" name="token" data-oauth-token />
     @await Html.PartialAsync("Components/_GoogleLoginButton", new GoogleLoginButtonViewModel
     {
         ClientId = Model.GoogleClientId,
