--- a/ODK.Web.Razor/Pages/Account/Activate.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Activate.cshtml
@@ -3,7 +3,7 @@
 @using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.Account.ActivateModel
 @{
-    Layout = "_HomeLayout";
+    Layout = "_AccountLayout";
     Model.Title = "Activate account";          
 }
 
