--- a/ODK.Web.Razor/Pages/Account/ChangeEmail.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ChangeEmail.cshtml
@@ -8,7 +8,7 @@
 @model ODK.Web.Razor.Pages.Account.ChangeEmailModel
 @inject IMemberService MemberService
 @{
-    Layout = "_HomeLayout";
+    Layout = "_AccountLayout";
     Model.Title = "Change email";
 
     var memberId = User.MemberId();
