--- a/ODK.Web.Razor/Pages/Account/Create.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Create.cshtml
@@ -3,7 +3,7 @@
 @using ODK.Web.Razor.Models.Components
 @model CreateModel
 @{
-    Layout = "_HomeLayout";
+    Layout = "_AccountLayout";
     Model.Title = "Create account";
 }
 
