--- a/ODK.Web.Razor/Pages/Account/Delete.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Delete.cshtml
@@ -7,7 +7,7 @@
 @using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.Account.DeleteModel
 @{
-    Layout = "_HomeLayout";
+    Layout = "_AccountLayout";
     Model.Title = "Delete account";
 }
 
