--- a/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
@@ -4,7 +4,7 @@
 @using ODK.Web.Razor.Models.Account
 @model ForgottenPasswordModel
 @{
-    Layout = "_HomeLayout";
+    Layout = "_AccountLayout";
     Model.Title = "Forgotten password";
 }
 
