--- a/ODK.Web.Razor/Pages/Account/Location.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Location.cshtml
@@ -12,7 +12,7 @@
 @inject ICountryService CountryService
 @inject IMemberService MemberService
 @{
-    Layout = "_HomeLayout";
+    Layout = "_AccountLayout";
     Model.Title = "Location";
 
     var memberId = User.MemberId();
