--- a/ODK.Web.Razor/Pages/Account/Notifications.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Notifications.cshtml
@@ -8,7 +8,7 @@
 @model NotificationsModel
 @inject INotificationService NotificationService
 @{
-    Layout = "_HomeLayout";
+    Layout = "_AccountLayout";
     Model.Title = "Notifications";
 
     var viewModel = await NotificationService.GetNotificationsPageViewModel(Model.CurrentMemberId);
