--- a/ODK.Web.Razor/Pages/Account/Pending.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Pending.cshtml
@@ -3,7 +3,7 @@
 @using ODK.Web.Common.Components
 @model ODK.Web.Razor.Pages.Account.PendingModel
 @{
-    Layout = "_HomeLayout";
+    Layout = "_AccountLayout";
     Model.Title = "Join";
 }
 
