--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
@@ -28,6 +28,7 @@
 
     @await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel(Model.OwnerSubscription)
     {
+        Chapter = Model.Chapter,
         Feature = SiteFeatureType.MemberSubscriptions,
         ContentFunc = 
             @<div>
