--- a/ODK.Web.Razor/Views/Shared/Header/_AccountDropdown.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_AccountDropdown.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Services.Authentication
-@model ODK.Web.Razor.Models.Header.AccountMenuViewModel
+@using ODK.Web.Razor.Models.Header
+@model AccountMenuViewModel
 
 @if (Model.MemberChapter != null)
 {
