--- a/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
@@ -6,7 +6,7 @@
 @using Microsoft.AspNetCore.Authorization
 @model ODK.Web.Razor.Pages.Account.ChangePasswordModel
 @{
-    Layout = "_HomeLayout";
+    Layout = "_AccountLayout";
     Model.Title = "Change password";
 }
 
