--- a/ODK.Web.Razor/Pages/Account/PasswordReset.cshtml
+++ b/ODK.Web.Razor/Pages/Account/PasswordReset.cshtml
@@ -4,7 +4,7 @@
 @using ODK.Web.Razor.Models.Components
 @model PasswordResetModel
 @{
-    Layout = "_HomeLayout";
+    Layout = "_AccountLayout";
     Model.Title = "Reset password";
 }
 
