--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMembersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMembersContent.cshtml
@@ -35,6 +35,7 @@
 
     @await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel(Model.OwnerSubscription)
     {
+    Chapter = Model.Chapter,
         Feature = SiteFeatureType.AdminMembers,
         ContentFunc = 
             @<div>
