--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_BulkEmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_BulkEmailContent.cshtml
@@ -9,8 +9,9 @@
 
 <h2>Bulk email</h2>
 
-@await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel(Model.Chapter)
+@await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel
 {
+    Chapter = Model.Chapter,
     Feature = SiteFeatureType.SendMemberEmails,
     ContentFunc = 
         @<form method="post" action="/groups/@Model.Chapter.Id/members/email" data-live-url-container>
