--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberConversationsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberConversationsContent.cshtml
@@ -56,6 +56,7 @@
     <section class="section">
         @await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel(Model.OwnerSubscription)
         {
+            Chapter = Model.Chapter,
             Feature = ODK.Core.Features.SiteFeatureType.SendMemberEmails,
             Content = await Html.PartialAsync("Components/_Panel", new PanelViewModel
             {
@@ -79,6 +80,7 @@ else
     <section class="section">
         @await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel(Model.OwnerSubscription)
         {
+       Chapter = Model.Chapter,
             Feature = ODK.Core.Features.SiteFeatureType.SendMemberEmails,
             ContentFunc = 
                 @<div>
