--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
@@ -23,6 +23,7 @@
 <section class="section">
     @await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel(Model.OwnerSubscription)
     {
+        Chapter = Model.Chapter,
         Feature = SiteFeatureType.MemberSubscriptions,
         ContentFunc = 
             @<div>
