--- a/ODK.Web.Razor/Views/Shared/Components/_RestrictedFeature.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_RestrictedFeature.cshtml
@@ -1,7 +1,9 @@
-﻿@using ODK.Services.Authorization
+﻿@using ODK.Core.Platforms
+@using ODK.Services.Authorization
 @using ODK.Web.Razor.Models.Components
 @model RestrictedFeatureViewModel
 @inject IAuthorizationService AuthorizationService
+@inject IPlatformProvider PlatformProvider
 @{
     var authorized = Model.Permitted != null 
         ? Model.Permitted.Value 
@@ -10,6 +12,8 @@
             : Model.Chapter != null 
                 ? await AuthorizationService.ChapterHasAccess(Model.Chapter, Model.Feature)
                 : false;
+
+    var platform = PlatformProvider.GetPlatform();
 }
 
 @if (authorized)
@@ -26,6 +30,10 @@
 }
 else
 {
-    @await Html.PartialAsync("Components/_UpgradeButton")
+    @await Html.PartialAsync("Components/_UpgradeButton", new UpgradeButtonViewModel
+    {
+        Chapter = Model.Chapter,
+        Platform = platform
+    })
     @Model.DisabledContentFunc?.Invoke(null)
 }
