--- a/ODK.Web.Razor/Views/Shared/Components/_UpgradeButton.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_UpgradeButton.cshtml
@@ -1,5 +1,8 @@
 ﻿@using ODK.Web.Common.Routes
-<a href="@OdkRoutes.Account.Subscription(null)" class="btn btn-outline-primary">
+@using ODK.Web.Razor.Models.Components
+@model UpgradeButtonViewModel
+
+<a href="@OdkRoutes.Account.Subscription(Model.Platform, Model.Chapter)" class="btn btn-outline-primary">
     <i class="fa-solid fa-unlock"></i>
     <span>Upgrade to unlock</span>
 </a>
