--- a/ODK.Web.Razor/Pages/Shared/_AccountLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_AccountLayout.cshtml
@@ -3,3 +3,18 @@
 }
 
 @RenderBody()
+
+@section meta
+{
+    @await RenderSectionAsync("meta", required: false)
+}
+
+@section styles
+{
+    @await RenderSectionAsync("styles", required: false)
+}
+
+@section scripts
+{
+    @await RenderSectionAsync("scripts", required: false)
+}
