--- a/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
@@ -3,6 +3,7 @@
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Groups
+@using ODK.Web.Razor.Models.Payments
 @model EventModel
 @inject IEventViewModelService EventViewModelService
 @{
@@ -27,3 +28,17 @@
         new MenuItem { Text = viewModel.Event.GetDisplayName() }
     }
 })
+
+@section scripts
+{
+    @if (viewModel.Event.TicketSettings != null && viewModel.ChapterPaymentSettings != null)
+    {
+        @await Html.PartialAsync("Payments/_PaymentScripts", new PaymentScriptsViewModel
+        {
+            ApiPublicKey = viewModel.ChapterPaymentSettings.ApiPublicKey ?? "",
+            CurrencyCode = viewModel.ChapterPaymentSettings.Currency.Code,
+            IsSubscription = false,
+            Provider = viewModel.ChapterPaymentSettings.Provider ?? default
+        })
+    }
+}
