Use common layout for groups and member groups

--- a/ODK.Web.Razor/Pages/My/Groups/Create.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Create.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "/my/groups/new"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Core.Members
 @using ODK.Services.Chapters
 @using ODK.Web.Common.Components
