--- a/ODK.Web.Razor/Pages/My/Groups/Index.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "/my/groups"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Chapters
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Chapters
@@ -10,77 +12,10 @@
     Model.Title = "My groups";
 
     var viewModel = await ChapterViewModelService.GetMemberChapters(Model.CurrentMemberId);
-    var textsDictionary = viewModel.Texts.ToDictionary(x => x.ChapterId);
 }
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
     Title = "My groups",
-    ContentFunc = 
-        @<div>
-            <section class="section--admin">
-                <h5>Owner</h5>
-                
-                @if (viewModel.Owned.Count > 0)
-                {
-                    @await Html.PartialAsync("Chapters/Admin/_ChapterTiles", new ChapterTilesViewModel
-                    {
-                        Chapters = viewModel.Owned.Select(x => new ChapterTileViewModel
-                        {
-                            Chapter = x,
-                            IsOwner = true,
-                            Platform = viewModel.Platform,
-                            Texts = textsDictionary.ContainsKey(x.Id) ? textsDictionary[x.Id] : null
-                        }).ToArray()
-                    })
-                }     
-                else
-                {
-                    <p>
-                        You haven't created any groups. 
-                        <a href="@OdkRoutes.MemberGroups.GroupCreate(viewModel.Platform)">Create a group</a>
-                    </p>
-                }
-            </section>
-
-            @if (viewModel.Admin.Any())
-            {
-                <section class="section--admin">
-                    <h5>Manager</h5>
-                    @await Html.PartialAsync("Chapters/Admin/_ChapterTiles", new ChapterTilesViewModel
-                    {
-                        Chapters = viewModel.Admin.Select(x => new ChapterTileViewModel
-                        {
-                            Chapter = x,
-                            IsAdmin = true,
-                            Platform = viewModel.Platform,
-                            Texts = textsDictionary.ContainsKey(x.Id) ? textsDictionary[x.Id] : null
-                        }).ToArray()
-                    })
-                </section>
-            }
-
-            <section class="section--admin">
-                <h5>Member</h5>
-                @if (viewModel.Member.Count > 0)
-                {
-                    @await Html.PartialAsync("Chapters/Admin/_ChapterTiles", new ChapterTilesViewModel
-                    {
-                        Chapters = viewModel.Member.Select(x => new ChapterTileViewModel
-                        {
-                            Chapter = x,
-                            Platform = viewModel.Platform,
-                            Texts = textsDictionary.ContainsKey(x.Id) ? textsDictionary[x.Id] : null
-                        }).ToArray()
-                    })
-                }
-                else
-                {
-                    <p>
-                        You aren't a member of any groups.
-                        <a href="@OdkRoutes.Groups.Index(viewModel.Platform)">Find a group</a>
-                    </p>
-                }
-            </section>
-        </div>    
+    Content = await Html.PartialAsync("Groups/_MemberGroupsContent", viewModel)    
 })
