--- a/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
@@ -7,21 +7,20 @@
 <div class="form-group">
     <div class="d-inline-block">
         <div>
-            @await Html.PartialAsync("Members/_MemberImage", new MemberImageViewModel
+            @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
             {
-                Member = Model.Member,
-                HasImage = Model.Image != null,
-                Image = Model.Image
+                Avatar = Model.Avatar,
+                Member = Model.Member                
             })
         </div>
 
-        <div class="d-flex justify-content-center">
-            <button class="btn btn-link" type="button" data-bs-toggle="modal" data-bs-target="#change-picture-modal">
-                Change picture
+        <div class="d-flex mt-3 gap-2">
+            <button class="btn btn-link p-0" type="button" data-bs-toggle="modal" data-bs-target="#change-picture-modal">
+                Change
             </button>
 
-            <form class="d-flex align-items-center" method="post" action="@OdkRoutes.Account.PictureRotate(Model.Chapter)">
-                <button class="btn-icon" data-bs-toggle="tooltip" data-bs-title="Rotate right">
+            <form class="d-flex align-items-center" method="post" action="/account/picture/rotate">
+                <button class="btn-icon" data-bs-toggle="tooltip" data-bs-title="Rotate">
                     <i class="fas fa-undo flip-horizontal"></i>
                 </button>
             </form>
@@ -36,14 +35,10 @@
     Size = "modal-lg",
     Body =
     @<div>
-        <form method="post" action="@OdkRoutes.Account.PictureUpload(Model.Chapter)" enctype="multipart/form-data">
-            @await Html.PartialAsync("Account/_PictureUpload", new PictureUploadViewModel
-            {
-                CropHeight = Model.Avatar?.CropHeight,
-                CropWidth = Model.Avatar?.CropWidth,
-                CropX = Model.Avatar?.CropX,
-                CropY = Model.Avatar?.CropY
-            })
+        <form method="post" action="/account/picture/change">
+            @Html.AntiForgeryToken()
+            
+            @await Html.PartialAsync("Account/_PictureUpload", new PictureUploadViewModel())
 
             <div class="d-flex justify-content-end mt-3">
                 <button class="btn btn-primary">Update</button>
